--- a/templates/pages/coding.gohtml
+++ b/templates/pages/coding.gohtml
@@ -3,7 +3,7 @@
     {{template "websocketjs" .}}
     {{template "monacoeditor" .}}
     {{template "fontawesome" .}}
-    {{template "codingjsscript" .}}
+    {{template "codingjsscript_gows" .}}
 
     <!-- Loader HTML -->
     <div id="ide-loader" class="fixed top-0 left-0 w-full h-full flex items-center justify-center bg-gray-900 bg-opacity-50 z-50">
